--- a/school-crowd.html
+++ b/school-crowd.html
@@ -36,7 +36,9 @@ https://github.com/tomtor/school-crowd
 <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
 <link rel="stylesheet" href="leaflet.css" />
+<!--
 <link rel="stylesheet" href="leaflet.label.css" />
+-->
 <link rel="stylesheet" href="L.Control.Locate.min.css" />
 <link rel="stylesheet" href="school-crowd.css" />
 </head>
@@ -123,9 +125,11 @@ https://github.com/tomtor/school-crowd
 </div>
 
 <script src="leaflet.js"></script>
-<script src="proj4-compressed.js"></script>
+<script src="proj4.js"></script>
 <script src="L.Control.Locate.min.js" charset="utf-8"></script>
+<!--
 <script src="leaflet.label.js"></script>
+-->
 <script src="proj4leaflet.js"></script>
 <script src="aes.js"></script>
 <script>
@@ -137,12 +141,15 @@ https://github.com/tomtor/school-crowd
 
 	var res = [3440.640, 1720.320, 860.160, 430.080, 215.040, 107.520, 53.760, 26.880, 13.440, 6.720, 3.360, 1.680, 0.840, 0.420];
 
-	var RDM = new L.Proj.CRS.TMS(
+	//var RDM = new L.Proj.CRS.TMS(
+	var RDM = new L.Proj.CRS(
 		'EPSG:28992',
-		'+proj=sterea +lat_0=52.15616055555555 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +units=m +towgs84=565.2369,50.0087,465.658,-0.406857330322398,0.350732676542563,-1.8703473836068,4.0812 +no_defs', [-285401.92, 22598.08, 595401.9199999999, 903401.9199999999], 
+		'+proj=sterea +lat_0=52.15616055555555 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +units=m +towgs84=565.2369,50.0087,465.658,-0.406857330322398,0.350732676542563,-1.8703473836068,4.0812 +no_defs', // [-285401.92, 22598.08, 595401.9199999999, 903401.9199999999], 
 	{
-		transformation: new L.Transformation(1,0,-1,0),
-		resolutions: res
+		//transformation: new L.Transformation(1,0,-1,0),
+		resolutions: res,
+		bounds: L.bounds([-285401.92, 22598.08], [595401.9199999999, 903401.9199999999]),
+		origin: [-285401.92, 22598.08]
 	});
 
 	var achtergrondkaart = L.tileLayer('https://geodata.nationaalgeoregister.nl/tms/1.0.0/brtachtergrondkaart/{z}/{x}/{y}.png', {
