--- a/school-crowd.html
+++ b/school-crowd.html
@@ -35,7 +35,7 @@ https://github.com/tomtor/school-crowd
 <script src="bootstrap/bootstrap.min.js"></script>
 <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
-<link rel="stylesheet" href="leaflet.css" />
+<link rel="stylesheet" href="leaflet.css?1" />
 <!--
 <link rel="stylesheet" href="leaflet.label.css" />
 -->
@@ -124,13 +124,13 @@ https://github.com/tomtor/school-crowd
 	</div>
 </div>
 
-<script src="leaflet.js"></script>
-<script src="proj4.js"></script>
+<script src="leaflet.js?1"></script>
+<script src="proj4.js?1"></script>
 <script src="L.Control.Locate.min.js" charset="utf-8"></script>
 <!--
 <script src="leaflet.label.js"></script>
 -->
-<script src="proj4leaflet.js"></script>
+<script src="proj4leaflet.js?1"></script>
 <script src="aes.js"></script>
 <script>
 	var serverBase = '/pdok-demo-data';
