--- a/geheim-beheer/index.html
+++ b/geheim-beheer/index.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="sorttable.js"></script>
 
-<script src="secret.js"></script>
+<script src="secret.js?1"></script>
 <style>
 tr td {
 	  background-color: #9999CC;
