--- a/school-crowd.html
+++ b/school-crowd.html
@@ -634,7 +634,7 @@ https://github.com/tomtor/school-crowd
 			return;
 		}
 		var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
-				"<tr><td>Link (bv foto):</td><td></tr><tr><td><input id=\"linkInput\" type=\"text\"/></td></tr>" +
+				// "<tr><td>Link (bv foto):</td><td></tr><tr><td><input id=\"linkInput\" type=\"text\"/></td></tr>" +
 				"<tr><td>Maak een keuze:</td></tr>" +
 				"<tr>" +
 				"<td><select id=\"selInput\" onchange=\"choose()\" style=\"width: 15em\" class=\"form-control\">" +
