--- a/geheim-beheer/votes.html
+++ b/geheim-beheer/votes.html
@@ -22,7 +22,10 @@ td {
 		<thead>
       <th>Actie</th>
       <th>ID</th>
+<!--
       <th>e-Mail</th>
+-->
+      <th>Session</th>
       <th>IP-address</th>
       <th>Date/Time</th>
       <th>Data</th>
@@ -56,7 +59,8 @@ function fetchData() {
 			this[1]= "";
 			try {
 			  js= JSON.parse(this[4]);
-				this[1]= js.eMail;
+				//this[1]= js.eMail;
+				this[1]= js.session;
 			} catch (e) {}
 			$.each(this, function(k , v) {
 				tbl_row += "<td>"+v+"</td>";
