Remove Info when done

--- a/intro.html
+++ b/intro.html
@@ -47,7 +47,7 @@ https://github.com/tomtor/school-crowd
 					<h4 class="modal-title">Let Op</h4>
 				</div>
 				<div class="modal-body">
-					<div class="alert alert-warning"><strong>Vul in waar je bent!<strong></div>
+					<div class="alert alert-warning"><strong>Vul in waar je bent!</strong></div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
@@ -64,7 +64,7 @@ https://github.com/tomtor/school-crowd
 					<h4 class="modal-title">Let Op</h4>
 				</div>
 				<div class="modal-body">
-					<div class="alert alert-warning"><strong>Vul je voornaam in!<strong></div>
+					<div class="alert alert-warning"><strong>Vul je voornaam in!</strong></div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
@@ -81,7 +81,7 @@ https://github.com/tomtor/school-crowd
 					<h4 class="modal-title">Let Op</h4>
 				</div>
 				<div class="modal-body">
-					<div class="alert alert-warning"><strong>Vul je e-Mail in!<strong></div>
+					<div class="alert alert-warning"><strong>Vul je e-Mail in!</strong></div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
@@ -98,7 +98,7 @@ https://github.com/tomtor/school-crowd
 					<h4 class="modal-title">Let Op</h4>
 				</div>
 				<div class="modal-body">
-					<div class="alert alert-warning"><strong>Vul de naam van je school in!<strong></div>
+					<div class="alert alert-warning"><strong>Vul de naam van je school in!</strong></div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
@@ -117,7 +117,7 @@ https://github.com/tomtor/school-crowd
 					<h4 class="modal-title">Let Op</h4>
 				</div>
 				<div class="modal-body">
-					<div class="alert alert-warning"><strong>Vul in hoe oud je bent!<strong></div>
+					<div class="alert alert-warning"><strong>Vul in hoe oud je bent!</strong></div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
