--- a/school-crowd.html
+++ b/school-crowd.html
@@ -232,8 +232,8 @@ https://github.com/tomtor/school-crowd
 			+ "</small>";
 		this._div.innerHTML = htmlInfo;
 	};
-	//if (getCookie("idSession").length > 0)
-	info.addTo(map);
+	if (getCookie("idDone").length == 0)
+		info.addTo(map);
 
 	$('#searchModal').on('shown.bs.modal', function () { $('#idGeo').focus(); })
 
@@ -546,10 +546,12 @@ https://github.com/tomtor/school-crowd
 					// "<tr><td>Object:</td><td>" + xss(plotlist[i].properties.uuid).substring(0,8) + "</td></tr>" +
 					// (plotlist[i].properties.objlink ?
 						// ("<tr><td>Link:</td><td><b><a href=\"" + decode(plotlist[i].properties.objlink) + "\" target=\"_blank\">toon</a></b></td></tr>") : "") +
-					"<tr><td>Soort:</td><td><b>" + xss(plotlist[i].properties.kind) + "</td></tr>" +
-					"<tr><td><button onclick=\"addVote("+i+",1);\" type=\"button\"><img src=\"images/thumbs_up.png\"/></button></td>" +
-					"<td><button onclick=\"addVote("+i+",-1);\" type=\"button\"><img src=\"images/thumbs_down.png\"/></button></td>" +
-					"</tr></table>";
+					"<tr><td>Soort:</td><td><b>" + xss(plotlist[i].properties.kind) + "</td></tr>";
+				if (plotlist[i].properties.session != getCookie("idSession")) {
+					pu= pu + "<tr><td><button onclick=\"addVote("+i+",1);\" type=\"button\"><img src=\"images/thumbs_up.png\"/></button></td>" +
+						"<td><button onclick=\"addVote("+i+",-1);\" type=\"button\"><img src=\"images/thumbs_down.png\"/></button></td>";
+				}
+				pu = pu + "</tr></table>";
 /*
 				if (plotlist[i].properties.crypt) {
 					pu= pu + "<button id=\"delCryptButton\" class=\"btn btn-danger btn-sm btn-block\" onclick=\"delSecret('"
@@ -562,9 +564,11 @@ https://github.com/tomtor/school-crowd
 					}
 				});
 				lm.addTo(map).bindPopup(pu);
+/*
 				if (plotlist[i].properties.crypt) {
 					markers[plotlist[i].properties.crypt]= lm;
 				}
+*/
 			}
 			catch (err) {
 				console.log(err);
@@ -712,6 +716,7 @@ https://github.com/tomtor/school-crowd
 					("<tr><td>Link:</td><td><b><a href=\"" + decode(gjf.properties.objlink) + "\" target=\"_blank\">toon</a></b></td></tr>") : "") +
 				"<tr><td>Soort:</td><td><b>" +  xss(gjf.properties.kind) + "</b></td></tr></table>" +
 				"<button id=\"delButton\" onclick=\"delObject('"+result+"')\" type=\"button\" class=\"btn btn-warning btn-sm btn-block\">Verwijder</button>";
+				//setCookie("idObjects", getCookie("idObjects") + ":");
 				markers[result]= lastMark;
 				lastMark.bindPopup(pu);
 				lastMark= null;
