--- a/school-crowd.html
+++ b/school-crowd.html
@@ -47,14 +47,21 @@ https://github.com/tomtor/school-crowd
 	<div id="heading" class="jumbotron">
 		<table width="100%">
 			<tr>
-				<td style="text-align: center;"><h2 style="padding: 2px;">School Crowd</h2><p>Zet de belangrijke objecten op de kaart</p></td><td class="logo"><a href="https://www.kadaster.nl"><img src="logo.png"/></a></td>
+				<td style="text-align: center;">
+					<h2 style="padding: 2px;">School Crowd</h2>
+					<p>Zet de belangrijke objecten op de kaart</p>
+					<div id="idNrActions"></div>
+					<div id="idFinished"></div>
+				</td>
+				<td class="logo"><a href="https://www.kadaster.nl"><img src="logo.png"/></a></td>
 			</tr>
+<!--
 			<tr>
 				<td>
-					<div id="idFinished" class="col-sm-4"></div>
-					<div id="idNrActions" class="col-sm-4"></div>
+					<div id="idFinished"></div>
 				</td>
 			</tr>
+-->
 		</table>
 	</div>
 <div id="map" style="margin-top: -12px; margin-right: -2px;"></div>
@@ -217,7 +224,7 @@ https://github.com/tomtor/school-crowd
 	// method that we will use to update the control based on feature properties passed
 	info.update = function (props) {
 		var htmlInfo =
-			'<b><small>Klik voegt toe:</small></b><br/><br/>'
+			'<b><small>Legenda:</small></b><br/><br/>'
 			+ "<small>"
 			+ "<img src='images/basisschool-icon.png' width='24'>&nbsp;Basisschool<br/>"
 			+ "<img src='images/brandweerkazerne-icon.png' width='24'>&nbsp;Brandweerkazerne<br/>"
@@ -238,14 +245,18 @@ https://github.com/tomtor/school-crowd
 	$('#searchModal').on('shown.bs.modal', function () { $('#idGeo').focus(); })
 
 	function finished() {
+		if (getCookie("idDone").length > 0) {
+			window.location.href = 'exit.html';
+			return;
+		}
 		//document.cookie= "idSession = ;";
 		setCookie("idDone", "true");
 		$("#idFinished").html("");
-		info.remove();
+		//info.remove();
 		//info._div.innerHTML = "";
+		showActions();
 		$.ajax({url: server+"/get/", success: function(result){ markersReceived(result) }});
 		map.setZoom(map.getZoom()-4);
-		//window.location.href = 'school-crowd.html';
 	}
 
 	function searchGeo() {
@@ -498,11 +509,17 @@ https://github.com/tomtor/school-crowd
 	}
 
 	function showActions() {
-		$("#idNrActions").html(
-			"<p>" + toInt("idNrAdded") + "&nbsp;+&nbsp;&nbsp;" +
-			toInt("idVotesUp") + "&nbsp;<img src=\"images/thumbs_up.png\"/>&nbsp;&nbsp;" +
-			toInt("idVotesDown") + "&nbsp;<img src=\"images/thumbs_down.png\"/>" + "</p>"
-		);
+		if (getCookie("idDone").length == 0) {
+			$("#idNrActions").html(
+				"<p>Je hebt " + toInt("idNrAdded") + " objecten toegevoegd!</p>"
+			);
+		} else {
+			$("#idNrActions").html(
+				"<p>Je hebt " + (toInt("idVotesUp") + toInt("idVotesDown")) + " objecten gecontroleerd: " +
+				toInt("idVotesUp") + "&nbsp;<img src=\"images/thumbs_up.png\"/>&nbsp;&nbsp;" +
+				toInt("idVotesDown") + "&nbsp;<img src=\"images/thumbs_down.png\"/>" + "</p>"
+			);
+		}
 	}
 
   function toInt(cookie) {
@@ -751,10 +768,10 @@ https://github.com/tomtor/school-crowd
 		//idPassword= getCookie("idPassword");
 
 		//if (getCookie("idSession").length > 0) {
-		if (getCookie("idDone").length == 0) {
+		//if (getCookie("idDone").length == 0) {
 			$("#idFinished").html(
 				"<p><a class='btn btn-primary btn-xl' style='color:white;' onclick='finished()'>Ik ben KLAAR!</a></p>");
-		}
+		//}
 		showActions();
   }
 
