--- a/school-crowd.html
+++ b/school-crowd.html
@@ -50,19 +50,14 @@ https://github.com/tomtor/school-crowd
 				<td style="text-align: center;">
 					<h2 style="padding: 2px;">School Crowd</h2>
 					<p>Zet de belangrijke objecten op de kaart</p>
-					<div id="idNrActions"></div>
-					<div id="idFinished"></div>
 				</td>
 				<td class="logo"><a href="https://www.kadaster.nl"><img src="logo.png"/></a></td>
 			</tr>
-<!--
-			<tr>
-				<td>
-					<div id="idFinished"></div>
-				</td>
-			</tr>
--->
 		</table>
+		<div style="text-align: center;">
+			<div id="idNrActions"></div>
+			<div id="idFinished"></div>
+		</div>
 	</div>
 <div id="map" style="margin-top: -12px; margin-right: -2px;"></div>
 <div id="dpi" style="height: 1in; left: -100%; position: absolute; top: -100%; width: 1in;"></div>
