--- a/school-crowd.html
+++ b/school-crowd.html
@@ -54,7 +54,7 @@ https://github.com/tomtor/school-crowd
 				<td class="logo"><a href="https://www.kadaster.nl"><img src="logo.png"/></a></td>
 			</tr>
 		</table>
-		<div style="text-align: center;">
+		<div style="text-align: center; background-color: #007395; padding: 4px; border-radius: 8px; color: white">
 			<div id="idNrActions"></div>
 			<div id="idFinished"></div>
 		</div>
@@ -503,14 +503,21 @@ https://github.com/tomtor/school-crowd
 		return L.circleMarker(latlng, geojsonMarkerOptions);
 	}
 
+	function men(n) {
+		if (n == 1)
+			return "";
+		return "en";
+	}
+
 	function showActions() {
 		if (getCookie("idDone").length == 0) {
 			$("#idNrActions").html(
-				"<p>Je hebt " + toInt("idNrAdded") + " object(en) toegevoegd!</p>"
+				"<p>Je hebt " + toInt("idNrAdded") + " object" + men(toInt("idNrAdded")) + " toegevoegd!</p>"
 			);
 		} else {
 			$("#idNrActions").html(
-				"<p>Je hebt " + (toInt("idVotesUp") + toInt("idVotesDown")) + " object(en) gecontroleerd:</p>" +
+				"<p>Je hebt " + (toInt("idVotesUp") + toInt("idVotesDown")) + " object" +
+				men(toInt("idVotesUp") + toInt("idVotesDown")) + " gecontroleerd:</p>" +
 				"<p>" + toInt("idVotesUp") + "&nbsp;<img src=\"images/thumbs_up.png\"/>&nbsp;&nbsp;" +
 				toInt("idVotesDown") + "&nbsp;<img src=\"images/thumbs_down.png\"/>" + "</p>"
 			);
