change Klaar text

--- a/school-crowd.html
+++ b/school-crowd.html
@@ -243,7 +243,9 @@ https://github.com/tomtor/school-crowd
 		if (getCookie("idDone").length > 0) {
 			window.location.href = 'exit.html';
 			return;
-		}
+		} else
+			$("#idFinished").html(
+				"<p><a class='btn btn-primary btn-xl' style='color:white;' onclick='finished()'>Ik ben KLAAR!</a></p>");
 		//document.cookie= "idSession = ;";
 		setCookie("idDone", "true");
 		//$("#idFinished").html("");
@@ -771,9 +773,13 @@ https://github.com/tomtor/school-crowd
 
 		//if (getCookie("idSession").length > 0) {
 		//if (getCookie("idDone").length == 0) {
+		if (getCookie("idDone").length > 0) {
 			$("#idFinished").html(
 				"<p><a class='btn btn-primary btn-xl' style='color:white;' onclick='finished()'>Ik ben KLAAR!</a></p>");
-		//}
+		} else {
+			$("#idFinished").html(
+				"<p><a class='btn btn-primary btn-xl' style='color:white;' onclick='finished()'>Ga naar stap 2, controleren!</a></p>");
+		}
 		showActions();
   }
 
