--- a/school-crowd.html
+++ b/school-crowd.html
@@ -778,7 +778,7 @@ https://github.com/tomtor/school-crowd
 				"<p><a class='btn btn-primary btn-xl' style='color:white;' onclick='finished()'>Ik ben KLAAR!</a></p>");
 		} else {
 			$("#idFinished").html(
-				"<p><a class='btn btn-primary btn-xl' style='color:white;' onclick='finished()'>Ga naar stap 2, controleren!</a></p>");
+				"<p><a class='btn btn-primary btn-xl' style='color:white;' onclick='finished()'>Ga naar stap 2, Controleren!</a></p>");
 		}
 		showActions();
   }
