--- a/intro.html
+++ b/intro.html
@@ -130,7 +130,7 @@ https://github.com/tomtor/school-crowd
 	<div id="heading" class="jumbotron">
 		<table width="100%">
 			<tr>
-				<td style="text-align: center;"><h2 style="padding: 2px;">School Crowd</h2><p>Zet de belangrijke objecten op de kaart</p></td><td class="logo"><a href="https://www.kadaster.nl"><img src="logo.png"/></a></td>
+				<td style="text-align: center;"><h2 style="padding: 2px;">School Crowd</h2><p>Zet de belangrijke objecten op de kaart (NIET BESCHIKBAAR!)</p></td><td class="logo"><a href="https://www.kadaster.nl"><img src="logo.png"/></a></td>
 			</tr>
 		</table>
 	</div>
@@ -277,7 +277,9 @@ function fill()
 		<p></p>
 -->
 
+<!--
 		<a class="btn btn-primary btn-xl" onclick="setCookies()">START de App!</a>
+-->
 <!--
 		<a class="btn btn-primary btn-xl" onclick="clrCookies()">Wis alle velden</a>
 -->
