--- a/school-crowd.html
+++ b/school-crowd.html
@@ -152,7 +152,7 @@ https://github.com/tomtor/school-crowd
 
 	var hasTouch = 'ontouchstart' in window || navigator.msMaxTouchPoints;
 
-	var res = [3440.640, 1720.320, 860.160, 430.080, 215.040, 107.520, 53.760, 26.880, 13.440, 6.720, 3.360, 1.680, 0.840, 0.420];
+	var res = [3440.640, 1720.320, 860.160, 430.080, 215.040, 107.520, 53.760, 26.880, 13.440, 6.720, 3.360, 1.680, 0.840, 0.420, 0.210];
 
 	//var RDM = new L.Proj.CRS.TMS(
 	var RDM = new L.Proj.CRS(
@@ -168,15 +168,14 @@ https://github.com/tomtor/school-crowd
 	var achtergrondkaart = L.tileLayer('https://geodata.nationaalgeoregister.nl/tms/1.0.0/brtachtergrondkaart/{z}/{x}/{y}.png', {
 		tms: true,
 		minZoom: 2,
-		maxZoom: 13,
+		maxZoom: 14,
 		attribution: '<a href="https://github.com/tomtor/PDOK-demo-app">DemoMap</a> Map data &copy; <a href="http://pdok.nl">PDOK</a>',
 		id: 'brtachtergrondkaart'
 	});
-	//var luchtfoto = L.tileLayer('https://geodata1.nationaalgeoregister.nl/luchtfoto/tms/1.0.0/luchtfoto_png/EPSG28992/{z}/{x}/{y}.png', {
 	var luchtfoto = L.tileLayer('https://geodata.nationaalgeoregister.nl/luchtfoto/rgb/tms/1.0.0/Actueel_ortho25/EPSG%3A28992/{z}/{x}/{y}.jpeg', {
 		tms: true,
 		minZoom: 2,
-		maxZoom: 13,
+		maxZoom: 14,
 		attribution: '<a href="https://github.com/tomtor/PDOK-demo-app">DemoMap</a> Map data &copy; <a href="http://pdok.nl">PDOK</a>',
 		id: 'luchtfoto'
 	});
